Ajusta conteudo de projetos.

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -34,13 +34,15 @@
   <strong>Email:</strong> edalcin@jbrj.org</p>
   </div>
 <div class="item">
-  <h3>Maria Lúcia</h3>
+  <h3>Maria Lúcia Moreira Nova da Costa</h3>
   <img src="{{static_url}}/images/equipe/Maria.jpg"/>
   <p>É Doutora pela Escola Nacional de Botânica
     Tropical, possui graduação em Engenharia Florestal pela Universidade de
     Brasília. Tem experiência na área de conservação e fortalecimento de jardins
     botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
-    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.</p>
+    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.<br/><br/>
+    <strong>Email:</strong> lucianova@gmail.com
+    </p>
 </div>
 <div class="item">
   <h3>Ricardo Avancini Fernandes</h3>
@@ -86,7 +88,9 @@
   possui pós graduação em Engenharia Econômica e Administração Industrial também pela UFRJ e MBA
   em Finanças pelo IBMEC. Atuou por 16 anos na iniciativa privada, em empresas atuantes nos setores de
   papel e celulose, petroquímica, energia, óleo e gás, logística e mineração, tendo conduzido atividades nas
-  áreas de planejamento, relações com investidores e comunicação.</p>
+  áreas de planejamento, relações com investidores e comunicação.<br/><br/>
+  <strong>Email:</strong> andrea@cncflora.net
+  </p>
   </div>
 <div class="item">
   <h3>Bruno Giminiani</h3>
@@ -96,7 +100,9 @@
   desenvolvimento de sistemas e processos utilizando tecnologias e ferramentas de código livre
   (opensource). No CNCFlora faz parte da equipe de "Projeto Desenvolvimento de sistemas e análises
   espaciais”, participando do desenvolvimento de sistemas, informatização, implementação e
-  gerenciamento do banco de dados.</p>
+  gerenciamento do banco de dados.<br/><br/>
+  <strong>Email:</strong> bruno@cncflora.net
+  </p>
 </div>
 <div class="item">
   <h3>Diogo Silva</h3>
@@ -234,7 +240,7 @@
   conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos
   científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar
   banho de cachoeira e sair com os amigos!<br/><br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
   <strong>Email:</strong> nina@cncflora.net
     </p>
 </div>
@@ -258,11 +264,62 @@
   <img src="{{static_url}}/images/equipe/Tamar.jpg"/>
   <p>
   Tamar Bajgielman é Doutora em Antropologia pela University of Kent, UK,
-  Mestre em Etnobotânica pela mesma universidade e graduada em Ciências 
-  Biológicas pela Universidade Santa Úrsula.  Tem experiência na área de 
-  Antropologia, com ênfase em Antropologia Ambiental, atuando principalmente 
-  nos seguintes temas: ecologia política, etnoecologia, conservação e manejo de 
-  recursos naturais, agricultura, pesca artesanal, propriedade coletiva e acesso a 
-  recursos produtivos.
+  Mestre em Etnobotânica pela mesma universidade e graduada em Ciências
+  Biológicas pela Universidade Santa Úrsula.  Tem experiência na área de
+  Antropologia, com ênfase em Antropologia Ambiental, atuando principalmente
+  nos seguintes temas: ecologia política, etnoecologia, conservação e manejo de
+  recursos naturais, agricultura, pesca artesanal, propriedade coletiva e acesso a
+  recursos produtivos.<br/><br/>
+  <strong>Email:</strong>tamar.rio@gmail.com
+  </p>
+</div>
+<div class="item">
+  <h3>Daniele Vila Nova</h3>
+  <img src="{{static_url}}/images/equipe/daniele.jpg"/>
+  <p>
+    é bióloga e doutora em Ecologia e Conservação pela Universidade Federal
+    do Paraná (2014). Daniele trabalha principalmente com a priorização espacial e análise de
+    governabilidade como uma estrutura de planejamento do espaço costeiro e marinho. Atualmente,
+    faz pós-doutorado, sob a supervisão de Rafael Loyola, e auxilia o CNCFlora a desenvolver o
+    primeiro mapa de áreas prioritárias para a conservação da flora ameaçada no Brasil. Daniele
+    adora viajar, fotografia e edição de vídeos, além de praticar mergulho e stand-up paddle.<br/>
+    <strong>Email:</strong> da_vilanova@ufg.br<br/>
+    <a href="http://lattes.cnpq.br/7089890791632018" target="_blank">Currículo lattes</a></p>
+</div>
+<div class="item">
+   <h3>Nathália Machado</h3>
+    <img src="{{static_url}}/images/equipe/nathalia.jpg"/>
+    <p>
+      é bióloga e doutora em Ecologia e Evolução pela Universidade Federal de
+      Goiás (2014). Nathália trabalha principalmente com priorização espacial para conservação,
+      ecologia de aves e risco de extinção. Atualmente, faz pós-doutorado, sob a supervisão de Rafael
+      Loyola, e auxilia o CNCFlora a desenvolver o primeiro mapa de áreas prioritárias para a
+      conservação da flora ameaçada no Brasil. Nathália adora viajar, dançar e praticar pilates.<br/>
+      <strong>Email:</strong> nathaliamachado@cncflora.net<br/>
+      <a href="http://lattes.cnpq.br/2608509187003731" target="_blank">Currículo lattes</a></p>
+</div>
+<div class="item">
+  <h3>Fernanda Wimmer</h3>
+  <img src="{{static_url}}/images/equipe/Fernanda.jpg"/>
+  <p>
+    Geógrafa formada pela Pontifícia Universidade Católica do Rio de
+    Janeiro, com especialização em Gestão Ambiental pela COPPE/UFRJ (2011). Trabalha com
+    geoprocessamento e sensoriamento remoto. No CNCFlora atua como técnica em
+    geoprocessamento. Fernanda adora artes, viajar, nadar e beber com os amigos!<br/>
+    <strong>Email:</strong> fernanda@cncflora.net
+  </p>
+</div>
+<div class="item">
+  <h3>Juliana Amaral</h3>
+  <img src="{{static_url}}/images/equipe/Juliana.jpg"/>
+  <p>
+    Bióloga e mestre em Botânica pela Escola Nacional de Botânica Tropical -
+    ENBT (2014). No CNCFlora, participa de todos os processos envolvidos na elaboração de
+    estratégias de conservação para a flora ameaçada de extinção, da redação de artigos científicos e
+    de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e
+    determinação do material botânico durante as expedições à campo. Juliana adora montanhas,
+    praticar Yoga, aprender coisas novas e tomar vinho com os amigos!<br/><br/><br/>
+    <strong><a href="http://lattes.cnpq.br/7258510578751609" target="_blank">Currículo lattes</a></strong><br/>
+    <strong>Email:</strong> juliana@cncflora.net
   </p>
 </div>
