--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -1,6 +1,6 @@
 <h3>Áreas Prioritárias</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-  <strong>O Projeto</strong><br/><br/>
+  <div class="banner-full"><img src="{{static_url}}/images/projetos/areas/areas-prioritarias-capa.jpg" /></div>
   <p>Em 2013, o CNCFlora publicou o Livro vermelho da flora do Brasil. Essa lista de
   espécies ameaçadas de extinção é uma ferramenta que indica quais plantas devem receber,
   prioritariamente, atenção por parte dos tomadores de decisão e da sociedade, sob pena de não
@@ -77,7 +77,7 @@
     <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
       <div class="item">
         <img src="{{static_url}}/images/equipe/rafael.jpg"/>
-        <p><strong>Rafael Loyola</strong> 
+        <p><strong>Rafael Loyola</strong>
         é mineiro, doutor em Ecologia pela UNICAMP e Mestre em Ecologia, Conservação e Manejo da Vida Silvestre pela UFMG. É bolsista de produtividade em pesquisa do CNPq e professor do Departamento de Ecologia da UFG. Coordena o Laboratório de Biogeografia da Conservação (CB-Lab) que busca entender os efeitos das mudanças globais sobre a distribuição da biodiversidade no planeta e oferecer soluções científicas para suporte à tomada de decisão ambiental no Brasil.
         <br/>
           <strong>Email:</strong> rdiasloyola@gmail.com<br/>
