--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -76,7 +76,7 @@
 
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+        <a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">
           <img src="{{static_url}}/images/livrovermelho.png"/>
           <div class="portfolio-overlay">
             <br/>
@@ -88,7 +88,7 @@
 
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf">
+        <a href="{{static_url}}/pdf/publicacao/manual_operacional.pdf" target="_blank">
           <img src="{{static_url}}/images/documentos/publicacoes/publicacoes1.png"/>
           <div class="portfolio-overlay">
             <br/>
@@ -100,7 +100,7 @@
 
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
-        <a href="{{static_url}}/pdf/publicacao/guia_metodologico.pdf">
+        <a href="{{static_url}}/pdf/guia_especialistas.pdf" target="_blank">
           <img src="{{static_url}}/images/documentos/publicacoes/guia_metodologico.png"/>
           <div class="portfolio-overlay">
             <br/>
@@ -192,7 +192,9 @@
 	Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
 	da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
 	Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
-	Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).</p>
+	Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).<br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4576965Y6" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> tainan@cncflora.net</p>
     </div>
     <div class="item">
         <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
@@ -200,7 +202,10 @@
 	Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
 	Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
 	atua no Projeto Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
-	flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.</p>
+	flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.<br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4559241J9" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> luiz@cncflora.net
+  </p>
     </div>
     <div class="item">
         <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
@@ -208,7 +213,9 @@
 	nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
 	editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
 	Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
-	nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.</p>
+	nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.<br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> lucasmoraes@cncflora.net</p>
     </div>
     <div class="item">
         <img src="{{static_url}}/images/equipe/Lucas.jpeg"/>
@@ -218,7 +225,8 @@
 	Universidade de New England (University of New England), Austrália. Possui experiência com a
 	elaboração, execução, redação e apresentação de estudo da resiliência de macrófitas submersas diante
 	de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
-	Mata Nebular da Serra dos Orgãos.</p>
+	Mata Nebular da Serra dos Orgãos.<br/>
+  <strong>Email:</strong> lmoulton@cncflora.net</p>
     </div>
     <div class="item">
         <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
@@ -231,7 +239,9 @@
 	nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
 	levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
 	educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
-	de Cerrado, Mata Atlântica e Restinga.</p>
+	de Cerrado, Mata Atlântica e Restinga.<br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> raquel@cncflora.net</p>
    </div>
   <div class="item">
   <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
@@ -240,9 +250,12 @@
 	também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
 	em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
 	temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
-	socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.</p>
-   </div>
-   </div>
+	socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.<br/>
+  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a></strong><br/>
+  <strong>Email:</strong> rodrigo@cncflora.net
+  </p>
+  </div>
+</div>
 </div>
 
 <!-- Modal -->
