--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -77,6 +77,7 @@
         da conservação. No CNCFlora coordena o projeto “Planejamento de ações para a conservação de
         espécies da Flora ameaçadas de extinção”. Eline adora o contato com a natureza, ir à praia,
         praticar Yoga, andar de bicicleta, viajar e aproveitar a companhia dos afilhados!<br/>
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4162048A7" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> eline@cncflora.net</p>
   </div>
   <div class="item">
@@ -86,6 +87,7 @@
         Amazônia. No CNCFlora faz parte da equipe planejamento de ações para a conservação de
         espécies ameaçadas de extinção, tendo como atribuição a análise de dados da flora, produção
         científica e coleta de dados de campo. Daniel adora fazer trilhas e tomar cerveja com os amigos!<br/>
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4732926E5" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> dmaurenza@cncflora.net
       </p>
   </div>
@@ -108,8 +110,8 @@
         de documentos técnicos ou de divulgação científica. Ainda, é responsável pela coleta e
         determinação do material botânico durante as expedições à campo. Juliana adora montanhas,
         praticar Yoga, aprender coisas novas e tomar vinho com os amigos!<br/>
+        <a href="http://lattes.cnpq.br/7258510578751609" target="_blank"><strong>Currículo lattes</strong></a><br/>
         <strong>Email:</strong> juliana@cncflora.net<br/>
-        <a href="http://lattes.cnpq.br/7258510578751609" target="_blank"><strong>Currículo</strong></a>
       </p>
   </div>
   <div class="item">
@@ -123,6 +125,7 @@
         documentos técnicos ou de divulgação científica. Ele ainda é responsável pela coleta e
         determinação do material botânico durante as expedições à campo. Verdi adora coletar e
         fotografar plantas, tomar chimarrão e apreciar cervejas artesanais.<br/>
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4251351Y9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> verdi@cncflora.net
       </p>
   </div>
@@ -136,6 +139,7 @@
         conservação para a flora ameaçada de extinção, nas expedições de campo e na redação de artigos
         científicos, projetos e documentos técnicos. Nina adora viajar, ir à praia, praticar Yoga, tomar
         banho de cachoeira e sair com os amigos!<br/>
+        <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4496488J9" target="_blank">Currículo lattes</a></strong><br/>
         <strong>Email:</strong> nina@cncflora.net
       </p>
   </div>
