--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -1,8 +1,10 @@
 <h3>Ex-situ</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <p>
-  O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais. 
+    <a href="{{static_url}}/images/projetos/areas/mapa.png" target="_blank"><div class="banner-m"><img src="{{static_url}}/images/projetos/ex-situ/ex situ.jpg"/></div></a>
+  O Projeto Ex Situ é dedicado às plantas ameaçadas da flora brasileira e atua a partir de duas linhas de ação conexas: o aprimoramento e a ampliação das coleções ex situ de espécies ameaçadas e a integração das ações ex situ aos esforços de conservação integrada. Na primeira linha, o foco é em fortalecer as coleções e as instituições que as mantêm. A segunda linha de ação visa a otimização do uso dos recursos e das coleções ex situ para a conservação in situ. O objetivo fundamental do projeto é evitar e reverter os processos de extinção da flora, através da conservação de germoplasma em coleções de plantas cultivadas, bancos de sementes, criopreservação e cultura em vitro, e da reintrodução das espécies em seus ambientes naturais.
   </p>
+
 </div>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
   <br/>
@@ -51,12 +53,13 @@
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
     <div class="item">
       <img src="{{static_url}}/images/equipe/Maria.jpg"/>
-      <p><strong>Maria Lúcia Nova da Costa</strong> É Doutora pela Escola Nacional de Botânica
+      <p><strong>Maria Lúcia Moreira Nova da Costa</strong> É Doutora pela Escola Nacional de Botânica
         Tropical, possui graduação em Engenharia Florestal pela Universidade de
         Brasília. Tem experiência na área de conservação e fortalecimento de jardins
         botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
         o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.<br/>
         <strong>Email:</strong> lucianova@gmail.com<br/>
+      </p>
       </div>
       <div class="item">
         <img src="{{static_url}}/images/equipe/tamar.jpg"/>
@@ -68,6 +71,8 @@
           nos seguintes temas: ecologia política, etnoecologia, conservação e manejo de
           recursos naturais, agricultura, pesca artesanal, propriedade coletiva e acesso a
           recursos produtivos.<br/>
+          <strong>Email:</strong>tamar.rio@gmail.com
+        </p>
         </div>
         <div class="item">
           <img src="{{static_url}}/images/equipe/Daniel.jpg"/>
