--- a/templates/content/pt-br/project/sistemas.html
+++ b/templates/content/pt-br/project/sistemas.html
@@ -53,7 +53,7 @@ Para tanto planejou-se a criação de um sistema de informação para o apoio e 
           desenvolvimento de sistemas e processos utilizando tecnologias e ferramentas de código livre
           (opensource). No CNCFlora faz parte da equipe de "Projeto Desenvolvimento de sistemas e análises
           espaciais”, participando do desenvolvimento de sistemas, informatização, implementação e
-          gerenciamento do banco de dados.</p>
+          gerenciamento do banco de dados.<br/><strong>Email:</strong> bruno@cncflora.net</p>
       </div>
       <div class="item">
         <img src="{{static_url}}/images/equipe/Ricardo.jpeg"/>
