Ajusta conteudo da home, livros e projetos.

--- a/templates/content/pt-br/document/documentos-norteadores.html
+++ b/templates/content/pt-br/document/documentos-norteadores.html
@@ -1,7 +1,7 @@
 <div class="doc">
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Documentação padrão e consistência para os critérios e categorias IUCN.pdf">
+  <a href="{{static_url}}/pdf/documentos/Documentacao_IUCN.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores1.jpg"/>
 <div class="portfolio-overlay">
     <p>Documentação padrão e consistência para os critérios e categorias IUCN.</p>
@@ -12,7 +12,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Convenção sobre Diversidade Biológica - CDB.pdf">
+  <a href="{{static_url}}/pdf/documentos/Convencao_CDB_0.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores2.jpg"/>
 <div class="portfolio-overlay">
     <p>Convenção sobre Diversidade Biológica - CDB.</p>
@@ -23,7 +23,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Guia de utilização dos Critérios e Categorias de Risco de Extinção da IUCN.pdf">
+  <a href="{{static_url}}/pdf/documentos/Guia_utilizacao_IUCN.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores3.jpg"/>
 <div class="portfolio-overlay">
     <p>Guia de utilização dos Critérios e Categorias de Risco de Extinção da IUCN.</p>
@@ -34,7 +34,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Sumário de Critérios e Categorias da IUCN.pdf">
+  <a href="{{static_url}}/pdf/documentos/Sumario_Categorias_IUCN.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores4.jpg"/>
 <div class="portfolio-overlay">
     <p>Sumário de Critérios e Categorias da IUCN.</p>
@@ -45,7 +45,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/GSPC - Global Strategy for Plant Conservation.pdf">
+  <a href="{{static_url}}/pdf/documentos/GSPC.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores5.jpg"/>
 <div class="portfolio-overlay">
     <p>GSPC - Global Strategy for Plant Conservation.</p>
@@ -56,7 +56,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/RELATÓRIO Workshop Desenvolvimento Econômico e Conservação.pdf">
+  <a href="{{static_url}}/pdf/documentos/relatorio_Workshop.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores6.jpg"/>
 <div class="portfolio-overlay">
     <p>RELATÓRIO Workshop Desenvolvimento Econômico e Conservação.</p>
@@ -67,7 +67,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
 <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Instrução Normativa n.6 - 2008 - Lista Oficial das Espécies da Flora Brasileira Ameaçada de Extinção.pdf">
+  <a href="{{static_url}}/pdf/documentos/Instrucao_Normati.pdf">
     <img src="{{static_url}}/images/documentos/norteadores/norteadores7.jpg"/>
 <div class="portfolio-overlay">
     <p>Instrução Normativa n.6 - 2008 - Lista Oficial das Espécies da Flora Brasileira Ameaçada de Extinção.</p>
