--- a/templates/content/pt-br/document/publicacoes.html
+++ b/templates/content/pt-br/document/publicacoes.html
@@ -58,4 +58,13 @@
 </a>
 </div>
 </div>
+<div class="col-sm-3 col-md-3 col-lg-3">
+<div class="img">
+  <a href="{{static_url}}/pdf/publicacao/Natureza_Conservacao.pdf"><img src="{{static_url}}/images/documentos/publicacoes/natureza_conservacao.jpg"/>
+<div class="portfolio-overlay"><br/>
+    <p>Natureza<br/>&<br/> Conservação</p>
+</div>
+</a>
+</div>
+</div>
 </div>
