--- a/templates/content/pt-br/document/relatorios.html
+++ b/templates/content/pt-br/document/relatorios.html
@@ -1,7 +1,7 @@
 <div class="doc">
   <div class="col-sm-3 col-md-3 col-lg-3">
     <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Relatório de Campo Espinhaço Meridional - Serra do Cipó .pdf">
+  <a href="{{static_url}}/pdf/relatorios/Relatorio_de_Campo_Espinhaço_Meridional.pdf">
     <img src="{{static_url}}/images/documentos/relatorio/relatorio1.jpg"/>
 <div class="portfolio-overlay">
     <p>Relatório de Campo Espinhaço Meridional - Serra do Cipó .</p>
@@ -12,7 +12,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
   <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Relatório Workshop de Treinamento para Análise de dados da Flora Brasileira.pdf">
+  <a href="{{static_url}}/pdf/relatorios/Relatorio_Worksho_Treinamento.pdf">
     <img src="{{static_url}}/images/documentos/relatorio/relatorio2.jpg"/>
 <div class="portfolio-overlay">
     <p>Relatório Workshop de Treinamento para Análise de dados da Flora Brasileira.</p>
@@ -23,7 +23,7 @@
 </div>
 <div class="col-sm-3 col-md-3 col-lg-3">
   <div class="img">
-  <a href="{{static_url}}/pdf/documentos/Relatorio Expedicao Diamantina Final.pdf">
+  <a href="{{static_url}}/pdf/relatorios/Relatorio_Expedica_Diamantina_Final.pdf">
     <img src="{{static_url}}/images/documentos/relatorio/relatorio3.jpg"/>
 <div class="portfolio-overlay">
     <p>Relatorio Expedicao Diamantina Final.</p>
