--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,13 +1,13 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf">
-      <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" />
+    <a href="" data-toggle="modal" data-target="#breve-one" >
+      <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf">LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
+    <h4><a href="" data-toggle="modal" data-target="#breve-one" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
       Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
       que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
@@ -22,28 +22,16 @@
       conservacionistas voltados as espécies mais suscetíveis à extinção iminente.</p>
   </div>
 </div>
-<div class="box-section box-project ">
-  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">
-      <img src="{{static_url}}/images/livrovermelho.png" />
-    </a>
-  </div>
 
-  <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
-    <p>
-      O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
-  </div>
-</div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="http://cncflora.jbrj.gov.br/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf">
+    <a href=""  data-toggle="modal" data-target="#breve-two">
       <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="http://cncflora.jbrj.gov.br/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <h4><a href=""  data-toggle="modal" data-target="#breve-two" >Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
@@ -56,3 +44,75 @@
     </p>
   </div>
 </div>
+<div class="box-section box-project ">
+  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+    <a href="" data-toggle="modal" data-target="#breve-three">
+      <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
+    </a>
+  </div>
+
+  <div class="description col-sm-8 col-md-8 col-lg-8">
+    <h4><a href="" data-toggle="modal" data-target="#breve-three">PAN Faveiro de Wilson</a></h4>
+    <p>
+      O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
+    </p>
+  </div>
+</div>
+<div class="box-section box-project ">
+  <div class="project-img col-sm-4 col-md-4 col-lg-4" >
+    <a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">
+      <img src="{{static_url}}/images/livrovermelho.png" />
+    </a>
+  </div>
+
+  <div class="description col-sm-8 col-md-8 col-lg-8">
+    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelho.pdf">LIVRO VERMELHO DA FLORA DO BRASIL</a></h4>
+    <p>
+      O CNCFlora lançou o primeiro "Livro Vermelho da Flora do Brasil". A publicação científica reúne avaliações sobre o risco de extinção de espécies de plantas no país e representa uma contribuição da comunidade científica para a atualização da “Lista Oficial de Espécies da Flora Brasileira Ameaçadas de Extinção”, que está a cargo do Ministério do Meio Ambiente.</p>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="breve-one" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+        </div>
+        <div class="modal-body">
+          LIVRO VERMELHO - PLANTAS RARAS DO CERRADO
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="breve-two" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+        </div>
+        <div class="modal-body">
+          Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="breve-three" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+          <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+        </div>
+        <div class="modal-body">
+          PAN Faveiro de Wilson
+        </div>
+      </div>
+    </div>
+  </div>
