--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -48,25 +48,20 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="http://cncflora.jbrj.gov.br/Livro_%C3%A1reas_priorit%C3%A1rias2014.pdf" target="_blank">
+      <div class="img breve">
+        <a href="" data-toggle="modal" data-target="#breve-one" >
           <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png"/>
           <div class="portfolio-overlay">
             <br/>
-            <p>Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</p>
+            <p>Em Breve<br/><br/>Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</p>
 
           </div>
         </a>
       </div>
     </div>
-    <p>O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
-      e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
-      mapas das áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de
-      extinção para cada bioma e para todo o território nacional. A publicação tem caráter oficial e irá
-      direcionar políticas públicas para a conservação de 2.107 espécies ameaçadas, em nível federal e
-      estadual, munindo tomadores de decisão com informações técnicas de alta qualidade e precisão.
-      É a primeira vez que o Brasil tem um mapa de áreas prioritárias para a conservação de plantas,
-      portanto, as oportunidades são enormes.</p>
+    <p>
+      O livro “Áreas Prioritárias para Conservação e Uso Sustentável da Flora Brasileira Ameaçada de Extinção” é um importante instrumento para elaboração de políticas públicas, pois indica as localidades no território nacional onde ações para reduzir o risco de extinção de espécies da flora brasileira podem ser mais efetivas, visando alcançar a Meta 11 do Plano Estratégico para a Conservação da Biodiversidade de Aichi (CDB) até 2020. A Meta 11 prevê que 17% das áreas terrestres e marinhas de cada país devem estar protegidas para a conservação da biodiversidade até 2020. Além disso, o mapa direciona políticas para o cumprimento das metas 5 e 7 da Estratégia Global para a Conservação de Plantas (GSPC). 
+    </p>
     </div>
 
   </div>
@@ -110,4 +105,20 @@
     </div>
     <div class="box-section col-sm-12 col-md-12 col-lg-12">
       <div class="banner-center"><img src="{{static_url}}/images/projetos/areas/logo_lab.jpg"/></div>
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="breve-one" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+          </div>
+          <div class="modal-body">
+            Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção
+          </div>
+        </div>
+      </div>
     </div>
