--- a/templates/content/pt-br/project/ex-situ.html
+++ b/templates/content/pt-br/project/ex-situ.html
@@ -30,7 +30,7 @@
 
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img breve">
-        <a href="#"  data-toggle="modal" data-target="#breve-one">
+        <a href="#"  data-toggle="modal" data-target="#breve-two">
         <img src="{{static_url}}/images/projetos/ex-situ/capa_estrategia1.png"/>
         <div class="portfolio-overlay">
           <br/>
@@ -113,5 +113,34 @@
               <strong>Email:</strong> edalcin@jbrj.org</p>
             </div>
 
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="breve-one" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Diagnóstico sobre a conservação ex situ da Flora Ameaçada Brasileira
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="breve-two" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        Estratégia Nacional para conservação ex situ
+      </div>
+    </div>
   </div>
 </div>
