--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -13,12 +13,12 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img">
-        <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf" target="_blank">
+      <div class="img breve">
+        <a href="" data-toggle="modal" data-target="#breve-four">
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           <div class="portfolio-overlay">
             <br/>
-            <p>PAN Faveiro de Wilson</p>
+            <p>Em Breve<br/><br/> PAN Faveiro de Wilson</p>
 
           </div>
         </a>
@@ -186,6 +186,21 @@
       <div class="modal-body">
         Plano de Ação Nacional para a conservação da Flora Ameaçada de Extinção na Serra do Espinhaço Meridional
       </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="breve-four" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
+      </div>
+      <div class="modal-body">
+        PAN Faveiro de Wilson
+        </div>
     </div>
   </div>
 </div>
