--- a/templates/home.html
+++ b/templates/home.html
@@ -79,7 +79,7 @@
 
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg" alt="" /></a>
+          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/livro_vermelho_2014.jpg" alt="" /></a>
           <div class="inner">
             <h3><a href="{{base_url}}/pt-br/livros">Livro Vermelho - Plantas Raras do Cerrado</a></h3>
             <p>Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
@@ -101,19 +101,16 @@
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/projetos/areas-prioritarias" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
+          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" alt="" /></a>
           <div class="inner">
             <h3>Áreas prioritárias para conservação</h3>
-            <p>O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
-              e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
-              mapas das áreas prioritárias para conservação e uso sustentável da flora brasileira ameaçada de
-              extinção para cada bioma e para todo o território nacional.</p>
+            <p>O livro “Áreas Prioritárias para Conservação e Uso Sustentável da Flora Brasileira Ameaçada de Extinção” é um importante instrumento para elaboração de políticas públicas, pois indica as localidades no território nacional onde ações para reduzir o risco de extinção de espécies da flora brasileira podem ser mais efetivas, visando alcançar a Meta 11 do Plano Estratégico para a Conservação da Biodiversidade de Aichi (CDB) até 2020.</p>
           </div>
         </div>
       </section>
       <section class="col-sm-12 col-md-6 col-lg-6">
         <div class="box post">
-          <a href="{{base_url}}/pt-br/projeto/planejamento-de-acoes" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
+          <a href="{{base_url}}/pt-br/livros" class="image left box-img"><img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" alt="" /></a>
           <div class="inner">
             <h3>PAN Faveiro de Wilson</h3>
             <p>
