--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -53,7 +53,7 @@
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img breve">
         <a href=""  data-toggle="modal" data-target="#breve-one">
-          <img src="{{static_url}}/images/projetos/lista-vermelha/Livro Vermelho - Raras do Cerrado.jpg"/>
+          <img src="{{static_url}}/images/livro_vermelho_2014.jpg"/>
           <div class="portfolio-overlay">
               <br/>
               <p>Em Breve<br/><br/> Livro Vermelho Plantas Raras do Cerrado, 2014</p>
