o que era em breve agora é publicado

--- a/templates/content/pt-br/equipe.html
+++ b/templates/content/pt-br/equipe.html
@@ -40,7 +40,7 @@
     Tropical, possui graduação em Engenharia Florestal pela Universidade de
     Brasília. Tem experiência na área de conservação e fortalecimento de jardins
     botânicos. No Instituto de Pesquisas Jardim Botânico do Rio de Janeiro ocupa
-    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.<br/><br/>
+    o cargo de Tecnologista Senior III e coordena o projeto 'Conservação Ex Situ'.<br/><br/><br />
     <strong>Email:</strong> lucianova@gmail.com
     </p>
 </div>
