--- a/templates/content/pt-br/livros.html
+++ b/templates/content/pt-br/livros.html
@@ -1,13 +1,13 @@
 <h3>Livros</h3>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="" data-toggle="modal" data-target="#breve-one" >
+    <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasDoCerrado.pdf" >
       <img src="{{static_url}}/images/livro_vermelho_2014.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="" data-toggle="modal" data-target="#breve-one" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasDoCerrado.pdf" >LIVRO VERMELHO - PLANTAS RARAS DO CERRADO</a></h4>
     <p>
       Apesar da profusão dos conceitos de raridade e das diferentes definições, é consenso
       que espécies raras podem apresentar uma alta vulnerabilidade e, portanto, devem ser
@@ -25,13 +25,13 @@
 
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href=""  data-toggle="modal" data-target="#breve-two">
+    <a href="http://cncflora.jbrj.gov.br/AreasPrioritarias.pdf">
       <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href=""  data-toggle="modal" data-target="#breve-two" >Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
+    <h4><a href="http://cncflora.jbrj.gov.br/AreasPrioritarias.pdf">Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</a></h4>
     <p>
       O principal produto do projeto até o momento é o livro Áreas prioritárias para conservação
       e uso sustentável da flora brasileira ameaçada de extinção. Esse documento apresenta os
@@ -46,13 +46,13 @@
 </div>
 <div class="box-section box-project ">
   <div class="project-img col-sm-4 col-md-4 col-lg-4" >
-    <a href="" data-toggle="modal" data-target="#breve-three">
+    <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
       <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg" />
     </a>
   </div>
 
   <div class="description col-sm-8 col-md-8 col-lg-8">
-    <h4><a href="" data-toggle="modal" data-target="#breve-three">PAN Faveiro de Wilson</a></h4>
+    <h4><a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">PAN Faveiro de Wilson</a></h4>
     <p>
       O Plano de Ação Nacional do faveiro-de-wilson (Dimorphandra wilsonii Rizzini), espécie Criticamente em perigo (CR) e endêmica de Minas Gerais, contém a melhor informação disponível sobre a espécie, além do planejamento com as ações necessárias para sua conservação.
     </p>
@@ -72,47 +72,3 @@
     </div>
   </div>
 
-  <!-- Modal -->
-  <div class="modal fade" id="breve-one" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
-        </div>
-        <div class="modal-body">
-          LIVRO VERMELHO - PLANTAS RARAS DO CERRADO
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal -->
-  <div class="modal fade" id="breve-two" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
-        </div>
-        <div class="modal-body">
-          Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal -->
-  <div class="modal fade" id="breve-three" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="myModalLabel">Em Breve</h4>
-        </div>
-        <div class="modal-body">
-          PAN Faveiro de Wilson
-        </div>
-      </div>
-    </div>
-  </div>
