--- a/templates/content/pt-br/project/areas-prioritarias.html
+++ b/templates/content/pt-br/project/areas-prioritarias.html
@@ -48,12 +48,12 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <a href="" data-toggle="modal" data-target="#breve-one" >
+      <div class="img">
+        <a href="http://cncflora.jbrj.gov.br/AreasPrioritarias.pdf">
           <img src="{{static_url}}/images/projetos/areas/capa_livro_areas_prioritarias.png"/>
           <div class="portfolio-overlay">
             <br/>
-            <p>Em Breve<br/><br/>Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</p>
+            <p>Áreas prioritárias para conservação e uso sustentável da flora Brasileira ameaçada de extinção</p>
 
           </div>
         </a>
