--- a/templates/content/pt-br/project/lista-vermelha.html
+++ b/templates/content/pt-br/project/lista-vermelha.html
@@ -1,62 +1,64 @@
-  <h3>Lista Vermelha</h3>
-  <div class="box-section col-sm-12 col-md-12 col-lg-12">
-      <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/vermelha.jpg" /></div>
-      <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
-        espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
-        <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>.
-        Listas vermelhas constituem uma ferramenta
-        importante para a priorização de investimentos na conservação de espécies e
-        também demandam muitos recursos para sua construção e atualização
-        (Rodinini et al., 2013).</p>
-
-      <p>Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, que conta
-        com uma equipe composta por profissionais formados em diferentes áreas
-        ligadas às ciências da natureza, e treinados no uso dos critérios e categorias
-        da <a href="http://www.iucnredlist.org/">União Internacional para Conservação da Natureza</a>.
-        Além destes, o projeto atua em colaboração com
-        uma rede de especialistas colaboradores, que validam as análises realizadas
-        pela equipe e contribuem para a consistência das avaliações de risco de
-        extinção.</p>
-
-      <p>O fluxo de trabalho adotado pela equipe, conta com um sistema de
-        informações online, desenvolvido especificamente para o processo de
-        avaliação de risco de extinção (SiSFlora) e possui três etapas básicas:</p>
-
-      <p>A etapa de “Análise de dados”, onde ocorre a compilação dos dados das
-        espécies, no perfil on-line de cada uma. São levantadas informações sobre a
-        biologia,ecologia e distribuição de cada espécie, além de dados de ameaças e
-        ações de conservação. Em seguida, durante a etapa de “Validação” os dados
-        passam pelo importante crivo da rede de especialistas colaboradores, que
-        através do SiSFlora, acessam e revisam as informações inseridas pela equipe
-        do Projeto Lista Vermelha. Feito isso, estas informações são revisadas pelos
-        analistas do Projeto Lista Vermelha, que incorporam todas as alterações
-        indicadas pelos especialistas.</p>
-
-      <p>Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
-        extinção” das espécies, seguindo o sistema de <a href="http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AA
-        s.pdf">categorias e critérios</a> (versão
-        3.1) estabelecidos pela IUCN. Durante essa etapa, as espécies são categorizadas em uma das
-        categorias de risco de extinção:</p>
-      <div class="banner-medium"><img src="{{static_url}}/images/projetos/lista-vermelha/unnamed.png" /></div><br/>
-      <p>Quando as avaliações são concluídas elas são disponibilizadas novamente aos
-        especialistas colaboradores, que podem enviar críticas e sugestões a respeito
-        das avaliações realizadas. Posteriormente, as avaliações são publicadas no
-        <a href="http://localhost:8889/pt-br/listavermelha">portal</a> e enviadas ao <a href="http://www.mma.gov.br/">Ministério do Meio
-        Ambiente (MMA)</a>, responsável pela elaboração da Lista Oficial de Plantas
-        Ameaçadas do Brasil.</p>
-</div>
+<h3>Lista Vermelha</h3>
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-  <br/>
+  <div class="banner-full"><img src="{{static_url}}/images/projetos/lista-vermelha/vermelha.jpg" /></div>
+  <p>Dentre as atribuições do CNCFlora está a de avaliar o risco de extinção de
+    espécies da flora do Brasil, até o ano de 2020, para atender a meta 2 da
+    <a href="http://www.cbd.int/gspc/">“Estratégia Global de Conservação de Plantas”</a>.
+    Listas vermelhas constituem uma ferramenta
+    importante para a priorização de investimentos na conservação de espécies e
+    também demandam muitos recursos para sua construção e atualização
+    (Rodinini et al., 2013).</p>
+
+  <p>Esta importante tarefa é executada pelo “Projeto Lista Vermelha”, que conta
+    com uma equipe composta por profissionais formados em diferentes áreas
+    ligadas às ciências da natureza, e treinados no uso dos critérios e categorias
+    da <a href="http://www.iucnredlist.org/">União Internacional para Conservação da Natureza</a>.
+    Além destes, o projeto atua em colaboração com
+    uma rede de especialistas colaboradores, que validam as análises realizadas
+    pela equipe e contribuem para a consistência das avaliações de risco de
+    extinção.</p>
+
+  <p>O fluxo de trabalho adotado pela equipe, conta com um sistema de
+    informações online, desenvolvido especificamente para o processo de
+    avaliação de risco de extinção (SiSFlora) e possui três etapas básicas:</p>
+
+  <p>A etapa de “Análise de dados”, onde ocorre a compilação dos dados das
+    espécies, no perfil on-line de cada uma. São levantadas informações sobre a
+    biologia,ecologia e distribuição de cada espécie, além de dados de ameaças e
+    ações de conservação. Em seguida, durante a etapa de “Validação” os dados
+    passam pelo importante crivo da rede de especialistas colaboradores, que
+    através do SiSFlora, acessam e revisam as informações inseridas pela equipe
+    do Projeto Lista Vermelha. Feito isso, estas informações são revisadas pelos
+    analistas do Projeto Lista Vermelha, que incorporam todas as alterações
+    indicadas pelos especialistas.</p>
+
+  <p>Com o conhecimento gerado, inicia-se o processo de “Avaliação de risco de
+    extinção” das espécies, seguindo o sistema de <a href="http://www.iucnredlist.org/documents/2001RedListCats_Crit_Portugu%C3%AA
+    s.pdf">categorias e critérios</a> (versão
+    3.1) estabelecidos pela IUCN. Durante essa etapa, as espécies são categorizadas em uma das
+    categorias de risco de extinção:</p>
+  <div class="banner-medium"><img src="{{static_url}}/images/projetos/lista-vermelha/unnamed.png" /></div><br/>
+  <p>Quando as avaliações são concluídas elas são disponibilizadas novamente aos
+    especialistas colaboradores, que podem enviar críticas e sugestões a respeito
+    das avaliações realizadas. Posteriormente, as avaliações são publicadas no
+    <a href="http://localhost:8889/pt-br/listavermelha">portal</a> e enviadas ao <a href="http://www.mma.gov.br/">Ministério do Meio
+    Ambiente (MMA)</a>, responsável pela elaboração da Lista Oficial de Plantas
+    Ameaçadas do Brasil.</p>
+</div>
+
+<div class="box-section col-sm-12 col-md-12 col-lg-12">
   <h3>Produtos</h3>
+
+
   <div class="doc">
 
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <a href=""  data-toggle="modal" data-target="#breve-one">
+      <div class="img">
+        <a href="http://cncflora.jbrj.gov.br/LivroVermelhoPlantasRarasCerrado.pdf"  >
           <img src="{{static_url}}/images/livro_vermelho_2014.jpg"/>
           <div class="portfolio-overlay">
               <br/>
-              <p>Em Breve<br/><br/> Livro Vermelho Plantas Raras do Cerrado, 2014</p>
+              <p> Livro Vermelho Plantas Raras do Cerrado, 2014</p>
           </div>
         </a>
       </div>
@@ -96,7 +98,7 @@
           </div>
         </a>
       </div>
-     </div>
+    </div>
 
     <div class="col-sm-3 col-md-3 col-lg-3">
       <div class="img">
@@ -114,11 +116,10 @@
 
   </div>
 </div>
-<div class="box-section col-sm-12 col-md-12 col-lg-12">
-  <br/>
-  <h3>Fluxo de trabalho - Plantas Raras do Cerrado</h3>
 
-<section class="box-steps">
+<div class="box-section col-sm-12 col-md-12 col-lg-12">
+  <h3>Fluxo de trabalho - Plantas Raras do Cerrado</h3>
+  <section class="box-steps">
     <div class="col-sm-3 col-md-3 col-lg-3 box active">
       <div class="box-chart chart ">
           <strong>Consolidação Taxonomica</strong>
@@ -182,80 +183,91 @@
     </div>
   </section>
 </div>
+
 <div class="box-section col-sm-12 col-md-12 col-lg-12">
-  <br/>
   <h3>Equipe</h3>
+
   <div class="slide-equipe" class="col-sm-12 col-md-12 col-lg-12">
-<div class="item">
-        <img src="{{static_url}}/images/equipe/tainan.jpeg"/>
-        <p><strong>Tainan Messina</strong> coordenadora do projeto Lista Vermelha:  No CNCFlora coordena o projeto “Lista
-	Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
-	da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
-	Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
-	Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).<br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4576965Y6" target="_blank">Currículo lattes</a></strong><br/>
-  <strong>Email:</strong> tainan@cncflora.net</p>
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/tainan.jpeg"/>
+      <p><strong>Tainan Messina</strong> coordenadora do projeto Lista Vermelha:  No CNCFlora coordena o projeto “Lista
+      Vermelha”. Tem experiência nas áreas de biologia da conservação, conservação de espécies ameaçadas
+      da flora e na elaboração de documentos técnico-científicos e protocolos para conservação da natureza.
+      Também é Mestranda da Escola Nacional de Botânica Tropical – ENBT/JBRJ, graduada em Ciências
+      Biológicas (Licenciatura + Bacharelado) pela Pontifícia Universidade Católica de Campinas – PUC (2005).<br/>
+      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4576965Y6" target="_blank">Currículo lattes</a></strong><br/>
+      <strong>Email:</strong> tainan@cncflora.net</p>
+    </div>
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
+      <p><strong>Luiz Antonio Ferreira dos Santos Filho</strong>Graduado em Ciências Biológicas pela Universidade Santa
+      Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
+      Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
+      atua no Projeto Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
+      flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.<br/>
+      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4559241J9" target="_blank">Currículo lattes</a></strong><br/>
+      <strong>Email:</strong> luiz@cncflora.net
+      </p>
+    </div>
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
+      <p><strong>Lucas Moraes</strong> No CNCFlora, é integrante da equipe do “Projeto Lista Vermelha”, com atuação principal
+      nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
+      editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
+      Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
+      nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.<br/>
+      <strong>
+        <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a>
+      </strong><br/>
+      <strong>Email:</strong> lucasmoraes@cncflora.net</p>
     </div>
     <div class="item">
-        <img src="{{static_url}}/images/equipe/Luiz.jpeg"/>
-        <p><strong>Luiz Antonio Ferreira dos Santos Filho</strong>Graduado em Ciências Biológicas pela Universidade Santa
-	Úrsula (2009). Pós-graduado em Meio Ambiente pela COPPE/UFRJ (2012). Mestrando pela Escola
-	Nacional de Botânica Tropical (ENBT/JBRJ). No Centro Nacional de Conservação da Flora (CNCFlora)
-	atua no Projeto Lista Vermelha, coordenando o fluxo de trabalho da avaliação do risco de extinção da
-	flora, a redação de artigos científicos e de documentos técnicos ou de divulgação científica.<br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4559241J9" target="_blank">Currículo lattes</a></strong><br/>
-  <strong>Email:</strong> luiz@cncflora.net
-  </p>
+      <img src="{{static_url}}/images/equipe/Lucas.jpeg"/>
+      <p><strong>Lucas Moulton</strong> No CNCFlora, faz parte da equipe do “Projeto Lista Vermelha”, participando da análise
+      de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação
+      científica; e responsável por traduções em inglês. Graduado em Ciência Ambiental (Bacharelado) pela
+      Universidade de New England (University of New England), Austrália. Possui experiência com a
+      elaboração, execução, redação e apresentação de estudo da resiliência de macrófitas submersas diante
+      de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
+      Mata Nebular da Serra dos Orgãos.<br/>
+      <strong>Email:</strong> lmoulton@cncflora.net</p>
+    </div>
+
+    <div class="item">
+      <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
+      <p>
+        <strong>Rodrigo Amaro da Fonseca e Silva</strong>Integrante da equipe do projeto “Lista Vermelha" do
+        atua na avaliação de risco de espécies e composição de documentos técnico-científicos. Participa
+        também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
+        em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
+        temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
+        socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.<br/>
+        <strong>
+          <a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a>
+        </strong>
+        <br/>
+        <strong>Email:</strong> rodrigo@cncflora.net
+      </p>
     </div>
     <div class="item">
-        <img src="{{static_url}}/images/equipe/Lucas_moraes.jpeg"/>
-	<p><strong>Lucas Moraes</strong> No CNCFlora, é integrante da equipe do “Projeto Lista Vermelha”, com atuação principal
-	nas análises de avaliação de risco de extinção. Além disso, possui partipação nas etapas de redação e
-	editoração de documentos e no gerenciamento do banco de imagens. Possui graduação em Ciências
-	Biológicas pela Universidade Federal do Rio de Janeiro, na modalidade Genética (2013). Tem experiência
-	nas áreas de evolução molecular, filogenética, filogeografia, fotografia e edição de imagens.<br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4407910Y7" target="_blank">Currículo lattes</a></strong><br/>
-  <strong>Email:</strong> lucasmoraes@cncflora.net</p>
+      <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
+      <p><strong>Raquel Negrão</strong> No CNCFlora faz parte da equipe do “Projeto Lista Vermelha”, participando da análise de
+      dados, avaliação de risco de extinção, redação de artigos científicos, de documentos técnicos e de
+      divulgação científica. É Doutora e Mestre pelo Programa de Ecologia e Recursos Naturais da
+      Universidade Federal de São Carlos e graduada em Ciências Biológicas pela mesma universidade.
+      Desenvolveu e participou de projetos nas áreas de Ecologia Vegetal de Populações e Comunidades,
+      Botânica, Ecologia da Paisagem, Ecologia de Estradas e Educação Ambiental, atuando principalmente
+      nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
+      levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
+      educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
+      de Cerrado, Mata Atlântica e Restinga.<br/>
+      <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
+      <strong>Email:</strong> raquel@cncflora.net</p>
     </div>
-    <div class="item">
-        <img src="{{static_url}}/images/equipe/Lucas.jpeg"/>
-	<p><strong>Lucas Moulton</strong> No CNCFlora, faz parte da equipe do “Projeto Lista Vermelha”, participando da análise
-	de dados, avaliação de risco, redação de artigos científicos e de documentos técnicos ou de divulgação
-	científica; e responsável por traduções em inglês. Graduado em Ciência Ambiental (Bacharelado) pela
-	Universidade de New England (University of New England), Austrália. Possui experiência com a
-	elaboração, execução, redação e apresentação de estudo da resiliência de macrófitas submersas diante
-	de aumento de nutrientes em sistema lêntico e como auxiliar de campo em estudos de fitossociologia da
-	Mata Nebular da Serra dos Orgãos.<br/>
-  <strong>Email:</strong> lmoulton@cncflora.net</p>
-    </div>
-    <div class="item">
-        <img src="{{static_url}}/images/equipe/Raquel.jpeg"/>
-	<p><strong>Raquel Negrão</strong> No CNCFlora faz parte da equipe do “Projeto Lista Vermelha”, participando da análise de
-	dados, avaliação de risco de extinção, redação de artigos científicos, de documentos técnicos e de
-	divulgação científica. É Doutora e Mestre pelo Programa de Ecologia e Recursos Naturais da
-	Universidade Federal de São Carlos e graduada em Ciências Biológicas pela mesma universidade.
-	Desenvolveu e participou de projetos nas áreas de Ecologia Vegetal de Populações e Comunidades,
-	Botânica, Ecologia da Paisagem, Ecologia de Estradas e Educação Ambiental, atuando principalmente
-	nos seguintes temas: estrutura e dinâmica de populações, ecologia de comunidades envolvendo
-	levantamento fitossociológicos, distribuição espacial, estudo de ecótones e efeito de transições artificias,
-	educação ambiental e conservação da biodiversidade. Possui experiência de campo em diferentes áreas
-	de Cerrado, Mata Atlântica e Restinga.<br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4717594P3" target="_blank">Currículo lattes</a></strong><br/>
-  <strong>Email:</strong> raquel@cncflora.net</p>
-   </div>
-  <div class="item">
-  <img src="{{static_url}}/images/equipe/Rodrigo.jpeg"/>
-	<p><strong>Rodrigo Amaro da Fonseca e Silva</strong>Integrante da equipe do projeto “Lista Vermelha" do
-	atua na avaliação de risco de espécies e composição de documentos técnico-científicos. Participa
-	também de atividades do projeto “Conservação ex situ”. Mestre em Ciência Ambiental (2012) e graduado
-	em Ciências Biológicas (2009) pela Universidade Federal Fluminense - UFF, tem experiências em
-	temáticas interdisciplinares, como gestão ambiental, conservação de espécies ameaçadas, planejamento
-	socioambiental, recuperação de áreas degradadas, educação ambiental, botânica e ecologia.<br/>
-  <strong><a href="http://buscatextual.cnpq.br/buscatextual/visualizacv.do?metodo=apresentar&id=K4238333Z3" target="_blank">Currículo lattes</a></strong><br/>
-  <strong>Email:</strong> rodrigo@cncflora.net
-  </p>
   </div>
-</div>
 </div>
 
 <!-- Modal -->
