--- a/templates/content/pt-br/project/planejamento-de-acoes.html
+++ b/templates/content/pt-br/project/planejamento-de-acoes.html
@@ -13,13 +13,11 @@
   <h3>Produtos</h3>
   <div class="doc">
     <div class="col-sm-3 col-md-3 col-lg-3">
-      <div class="img breve">
-        <a href="" data-toggle="modal" data-target="#breve-four">
+      <div class="img">
+        <a href="{{static_url}}/pdf/planejamento/produto/PAN_Faveiro-de-Wilson.pdf">
           <img src="{{static_url}}/images/projetos/planejamento/faveiro-de-wilson.jpg"/>
           <div class="portfolio-overlay">
-            <br/>
-            <p>Em Breve<br/><br/> PAN Faveiro de Wilson</p>
-
+            <p> PAN Faveiro de Wilson</p>
           </div>
         </a>
       </div>
